--- a/app/src/main/res/layout/activity_taptap.xml
+++ b/app/src/main/res/layout/activity_taptap.xml
@@ -18,16 +18,32 @@
         android:layout_height="wrap_content"
         android:text="0초"
         android:textSize="40dp"
-        android:id="@+id/time_tv"
+        android:id="@+id/tv_time"
         app:layout_constraintTop_toBottomOf="@id/pg_bar"
         android:gravity="center_horizontal"
+        tools:ignore="MissingConstraints" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_time"
+        android:text="PAUSE"
+        android:id="@+id/btn_pause"
+        android:enabled="false"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HOME"
+        android:id="@+id/btn_home"
+        app:layout_constraintTop_toBottomOf="@+id/btn_pause"
         tools:ignore="MissingConstraints" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/time_tv"
+        app:layout_constraintTop_toBottomOf="@id/btn_pause"
         tools:ignore="MissingConstraints"
         >
 
@@ -37,15 +53,16 @@
             android:textSize="40dp"
             android:text="0"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/cnt_tv"
+            android:id="@+id/tv_cnt"
             />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/cnt_button"
+            android:id="@+id/btn_cnt"
+            android:enabled="false"
             android:layout_gravity="center_horizontal"
-            android:layout_alignBottom="@+id/cnt_tv"
+            android:layout_alignBottom="@+id/tv_cnt"
             android:text="CLICK"/>
 
     </LinearLayout>
@@ -85,8 +102,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:id="@+id/startBtn"
+            android:id="@+id/btn_start"
             android:text="START"
+            android:enabled="false"
             android:layout_toRightOf="@+id/radioGroup"
             android:layout_marginLeft="30dp"
             tools:ignore="MissingConstraints" />
@@ -94,9 +112,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:id="@+id/rstBtn"
+            android:id="@+id/btn_reset"
             android:text="RESET"
-            android:layout_toRightOf="@+id/startBtn"/>
+            android:layout_toRightOf="@+id/btn_start"
+            />
     </RelativeLayout>
 
 
