--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,13 @@
             android:id="@+id/goto_balloon"
             android:text="balloon"
             tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goto_scav"
+            android:text="Scavenger Hunt"
+            tools:ignore="MissingConstraints" />
+
     </LinearLayout>
 
 
