--- a/app/src/main/res/layout/activity_balloon.xml
+++ b/app/src/main/res/layout/activity_balloon.xml
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_home"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:listitem="@layout/balloon_recycler" />
+        tools:listitem="@layout/recycler_balloon" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
