--- a/app/src/main/res/layout/activity_scav_list.xml
+++ b/app/src/main/res/layout/activity_scav_list.xml
@@ -10,19 +10,23 @@
   <androidx.recyclerview.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      app:layout_constrainedHeight="true"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toTopOf="@+id/btn_layout"
+      android:layout_marginTop="10dp"
       android:orientation="vertical"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       android:id="@+id/rv_scavlist"
-      tools:listitem="@layout/scav_recycler"
+      tools:listitem="@layout/recycler_scav"
       tools:ignore="MissingConstraints" />
 
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/btn_layout"
-      android:layout_marginTop="30dp"
       app:layout_constraintTop_toBottomOf="@+id/rv_scavlist"
       android:gravity="center_horizontal"
+      app:layout_constraintBottom_toBottomOf="parent"
       tools:ignore="MissingConstraints">
 
     <Button
