--- a/app/src/main/res/layout/activity_scav_list.xml
+++ b/app/src/main/res/layout/activity_scav_list.xml
@@ -9,7 +9,7 @@
 
   <androidx.recyclerview.widget.RecyclerView
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       app:layout_constrainedHeight="true"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/btn_layout"
@@ -27,6 +27,7 @@
       app:layout_constraintTop_toBottomOf="@+id/rv_scavlist"
       android:gravity="center_horizontal"
       app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_margin="10dp"
       tools:ignore="MissingConstraints">
 
     <Button
