mBuilder.setCancelable(false) Finger Choice ToDo: foldering

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,13 @@
             android:id="@+id/goto_math"
             android:text="Mathematics"
             tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goto_choice"
+            android:text="Finger Choice"
+            tools:ignore="MissingConstraints" />
+
 
     </LinearLayout>
 
