--- a/app/src/main/res/layout/recycler_math.xml
+++ b/app/src/main/res/layout/recycler_math.xml
@@ -8,6 +8,7 @@
         android:id="@+id/btn_rv_math"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20dp"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
