--- a/app/src/main/res/layout/activity_initial_quiz.xml
+++ b/app/src/main/res/layout/activity_initial_quiz.xml
@@ -4,13 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScavengerHuntActivity">
+    tools:context=".InitialQuizActivity">
+
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:id="@+id/pg_bar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="HOME"
         android:id="@+id/btn_home"
+        app:layout_constraintTop_toBottomOf="@+id/pg_bar"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0초"
+        android:textSize="40dp"
+        android:id="@+id/tv_time"
+        android:layout_margin="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_home"
+        android:gravity="center"
         tools:ignore="MissingConstraints" />
 
     <RelativeLayout
@@ -25,19 +44,25 @@
             android:id="@+id/tv_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ITEM"
+            android:text="_______"
             android:textSize="40dp"
             android:layout_margin="10dp"
             tools:ignore="MissingConstraints"/>
-        <TextView
-            android:id="@+id/tv_result"
+        <EditText
+            android:id="@+id/et_answer"
             android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SCORE"
-            android:textSize="40dp"
+            android:hint="answer"
+            android:textSize="30dp"
             android:layout_below="@+id/tv_item"
             tools:ignore="MissingConstraints"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SUBMIT"
+            android:id="@+id/btn_submit"
+            android:layout_below="@+id/et_answer"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -50,17 +75,10 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ITEM LIST"
-            android:layout_alignParentLeft="true"
-            android:id="@+id/btn_itemlist"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="START"
             android:gravity="center_horizontal"
             android:layout_alignParentRight="true"
             android:id="@+id/btn_start"/>
     </RelativeLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
