--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,12 @@
             android:id="@+id/goto_choice"
             android:text="Finger Choice"
             tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goto_initial"
+            android:text="Initial Quiz"
+            tools:ignore="MissingConstraints" />
 
 
     </LinearLayout>
