--- a/app/src/main/res/layout/activity_math.xml
+++ b/app/src/main/res/layout/activity_math.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:textSize="40dp"
         android:text="SCORE: 0"
-        android:id="@+id/tv_score"
+        android:id="@+id/tv_result"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/btn_home"
         tools:ignore="MissingConstraints" />
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lay_quest_math"
-        app:layout_constraintTop_toBottomOf="@+id/tv_score"
+        app:layout_constraintTop_toBottomOf="@+id/tv_result"
         android:gravity="center"
         android:orientation="horizontal"
         tools:ignore="MissingConstraints">
