my best score, menu layout, textWatcher(enter > submit, erase space)

--- a/app/src/main/res/layout/activity_balloon.xml
+++ b/app/src/main/res/layout/activity_balloon.xml
@@ -6,68 +6,80 @@
     android:layout_height="match_parent"
     tools:context=".BalloonActivity">
 
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:id="@+id/pg_bar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        tools:ignore="MissingConstraints" />
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/lay_time"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/pg_bar"
-        android:id="@+id/lay_quest_balloon"
-        android:gravity="center_horizontal"
         tools:ignore="MissingConstraints">
 
+        <ProgressBar
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/pg_bar"
+            android:layout_marginLeft="10dp"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            tools:ignore="MissingConstraints" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0초"
-            android:textSize="40dp"
+            android:textSize="25dp"
             android:id="@+id/tv_time"
             android:layout_margin="15dp"
-            tools:ignore="MissingConstraints" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="40dp"
-            android:text="SCORE: 0"
-            android:id="@+id/tv_cnt"
-            android:layout_toRightOf="@id/tv_time"
-            android:layout_margin="15dp"
+            android:layout_toRightOf="@+id/pg_bar"
             tools:ignore="MissingConstraints" />
     </RelativeLayout>
 
-    <Button
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="PAUSE"
-        android:id="@+id/btn_pause"
-        android:enabled="false"
-        app:layout_constraintTop_toBottomOf="@id/lay_quest_balloon"
-        android:gravity="center_horizontal"
-        tools:ignore="MissingConstraints" />
+        android:orientation="vertical"
+        android:id="@+id/lay_menu"
+        app:layout_constraintTop_toBottomOf="@id/lay_time"
+        tools:ignore="MissingConstraints">
 
-    <Button
-        android:layout_width="wrap_content"
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HOME"
+            android:id="@+id/btn_home"
+            tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PAUSE"
+            android:id="@+id/btn_pause"
+            android:enabled="false"
+            android:layout_below="@+id/btn_home"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_pause"
+            android:text="_____"
+            android:id="@+id/tv_best_score"
+            android:textSize="30dp"/>
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="HOME"
-        android:id="@+id/btn_home"
-        app:layout_constraintTop_toBottomOf="@+id/btn_pause"
+        android:textSize="40dp"
+        android:text="SCORE: 0"
+        android:id="@+id/tv_score_balloon"
+        android:layout_margin="15dp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/lay_menu"
         tools:ignore="MissingConstraints" />
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        android:id="@+id/tv_balloon_quest"
-        app:layout_constraintTop_toBottomOf="@+id/lay_quest_balloon"
-        app:layout_constraintRight_toRightOf="parent"
+        android:gravity="center"
+        android:id="@+id/lay_balloon_quest"
+        app:layout_constraintTop_toBottomOf="@+id/tv_score_balloon"
         tools:ignore="MissingConstraints">
 
         <TextView
@@ -76,8 +88,7 @@
             android:id="@+id/tv_balloon1"
             android:textSize="40dp"
             android:text="..."
-            android:gravity="center_horizontal"
-            android:layout_margin="15dp"
+            android:layout_margin="20dp"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -85,9 +96,8 @@
             android:id="@+id/tv_balloon2"
             android:textSize="40dp"
             android:text="..."
-            android:gravity="center_horizontal"
-            android:layout_toRightOf="@+id/tv_balloon1"
-            android:layout_margin="15dp"
+            android:layout_toRightOf="@id/tv_balloon1"
+            android:layout_margin="20dp"
             />
 
     </RelativeLayout>
@@ -99,8 +109,8 @@
         android:layout_marginTop="68dp"
         android:orientation="vertical"
         android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/lay_balloon_quest"
 
-        app:layout_constraintTop_toBottomOf="@+id/btn_home"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
         tools:listitem="@layout/recycler_balloon" />
