--- a/app/src/main/res/layout/activity_scavenger_hunt.xml
+++ b/app/src/main/res/layout/activity_scavenger_hunt.xml
@@ -6,23 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".ScavengerHuntActivity">
 
-    <Button
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="HOME"
-        android:id="@+id/btn_home"
-        tools:ignore="MissingConstraints" />
+        android:orientation="vertical"
+        android:id="@+id/lay_menu"
+        tools:ignore="MissingConstraints">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HOME"
+            android:id="@+id/btn_home"
+            tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PAUSE"
+            android:id="@+id/btn_pause"
+            android:enabled="false"
+            android:layout_below="@+id/btn_home"
+            android:visibility="gone"
+            tools:ignore="MissingConstraints" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/btn_home"
         android:gravity="center"
         tools:ignore="MissingConstraints">
 
         <TextView
-            android:id="@+id/tv_item"
+            android:id="@+id/tv_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ITEM"
@@ -30,13 +46,13 @@
             android:layout_margin="10dp"
             tools:ignore="MissingConstraints"/>
         <TextView
-            android:id="@+id/tv_result"
+            android:id="@+id/tv_item_score"
             android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SCORE"
             android:textSize="40dp"
-            android:layout_below="@+id/tv_item"
+            android:layout_below="@+id/tv_item_name"
             tools:ignore="MissingConstraints"/>
     </RelativeLayout>
 
