--- a/app/src/main/res/layout/activity_finger_choice.xml
+++ b/app/src/main/res/layout/activity_finger_choice.xml
@@ -6,12 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".FingerChoiceActivity">
 
-    <Button
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="HOME"
-        android:id="@+id/btn_home"
-        tools:ignore="MissingConstraints" />
+        android:orientation="vertical"
+        android:id="@+id/lay_menu"
+        tools:ignore="MissingConstraints">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HOME"
+            android:id="@+id/btn_home"
+            tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PAUSE"
+            android:id="@+id/btn_pause"
+            android:enabled="false"
+            android:layout_below="@+id/btn_home"
+            android:visibility="gone"
+            tools:ignore="MissingConstraints" />
+    </RelativeLayout>
 
     <TextView
         android:layout_width="match_parent"
