--- a/app/src/main/res/layout/activity_initial_quiz.xml
+++ b/app/src/main/res/layout/activity_initial_quiz.xml
@@ -6,37 +6,69 @@
     android:layout_height="match_parent"
     tools:context=".InitialQuizActivity">
 
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:id="@+id/pg_bar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HOME"
-        android:id="@+id/btn_home"
-        app:layout_constraintTop_toBottomOf="@+id/pg_bar"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0초"
-        android:textSize="40dp"
-        android:id="@+id/tv_time"
-        android:layout_margin="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_home"
-        android:gravity="center"
-        tools:ignore="MissingConstraints" />
+        android:id="@+id/lay_time"
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints">
+
+        <ProgressBar
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/pg_bar"
+            android:layout_marginLeft="10dp"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0초"
+            android:textSize="25dp"
+            android:id="@+id/tv_time"
+            android:layout_margin="15dp"
+            android:layout_toRightOf="@+id/pg_bar"
+            tools:ignore="MissingConstraints" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/lay_menu"
+        app:layout_constraintTop_toBottomOf="@id/lay_time"
+        tools:ignore="MissingConstraints">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HOME"
+            android:id="@+id/btn_home"
+            tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PAUSE"
+            android:id="@+id/btn_pause"
+            android:enabled="false"
+            android:visibility="gone"
+            android:layout_below="@+id/btn_home"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_pause"
+            android:text="_____"
+            android:id="@+id/tv_best_score"
+            android:visibility="gone"
+            android:textSize="30dp"/>
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/btn_home"
+        app:layout_constraintTop_toBottomOf="@+id/lay_menu"
         android:gravity="center"
         tools:ignore="MissingConstraints">
 
