--- a/app/src/main/res/layout/activity_taptap.xml
+++ b/app/src/main/res/layout/activity_taptap.xml
@@ -6,44 +6,68 @@
     android:layout_height="match_parent"
     tools:context=".TaptapActivity">
 
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:id="@+id/pg_bar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0초"
-        android:textSize="40dp"
-        android:id="@+id/tv_time"
-        app:layout_constraintTop_toBottomOf="@id/pg_bar"
-        android:gravity="center_horizontal"
-        tools:ignore="MissingConstraints" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_time"
-        android:text="PAUSE"
-        android:id="@+id/btn_pause"
-        android:enabled="false"
-        tools:ignore="MissingConstraints" />
+        android:id="@+id/lay_time"
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HOME"
-        android:id="@+id/btn_home"
-        app:layout_constraintTop_toBottomOf="@+id/btn_pause"
-        tools:ignore="MissingConstraints" />
+        <ProgressBar
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/pg_bar"
+            android:layout_marginLeft="10dp"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0초"
+            android:textSize="25dp"
+            android:id="@+id/tv_time"
+            android:layout_margin="15dp"
+            android:layout_toRightOf="@+id/pg_bar"
+            tools:ignore="MissingConstraints" />
+    </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/btn_pause"
+        android:id="@+id/lay_menu"
+        app:layout_constraintTop_toBottomOf="@id/lay_time"
+        tools:ignore="MissingConstraints">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HOME"
+            android:id="@+id/btn_home"
+            tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PAUSE"
+            android:id="@+id/btn_pause"
+            android:enabled="false"
+            android:layout_below="@+id/btn_home"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_pause"
+            android:text="_____"
+            android:id="@+id/tv_best_score"
+            android:textSize="30dp"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/lay_menu"
         tools:ignore="MissingConstraints"
         >
 
@@ -52,8 +76,7 @@
             android:layout_height="wrap_content"
             android:textSize="40dp"
             android:text="0"
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/tv_cnt"
+            android:id="@+id/tv_score_taptap"
             />
 
         <Button
@@ -61,11 +84,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/btn_cnt"
             android:enabled="false"
-            android:layout_gravity="center_horizontal"
-            android:layout_alignBottom="@+id/tv_cnt"
+            android:layout_below="@+id/tv_score_taptap"
             android:text="CLICK"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
