--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,12 @@
             android:id="@+id/goto_initial"
             android:text="Initial Quiz"
             tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goto_leftright"
+            android:text="Left Right"
+            tools:ignore="MissingConstraints" />
 
 
     </LinearLayout>
