--- a/app/src/main/res/layout/activity_taptap.xml
+++ b/app/src/main/res/layout/activity_taptap.xml
@@ -93,6 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:id="@+id/lay_bottom_buttons"
         tools:ignore="MissingConstraints">
 
         <RadioGroup
