--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,12 @@
             android:id="@+id/goto_findnum"
             android:text="Find Number"
             tools:ignore="MissingConstraints" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goto_conntest"
+            android:text="Conn Test"
+            tools:ignore="MissingConstraints" />
 
     </LinearLayout>
 
